# libeigentlich

./: CMakeLists.txt  README.md
src/: EigentlichBaseType.cpp  EigentlichBaseType.h  EigentlichInt.cpp  EigentlichInt.h  test-basetype.cpp
